Support Java 9 modules specific JVM arguments
--add-modules, --add-reads, --add-exports and --add-opens can be
followed by a space and the module/package it applies to. This pair is
split when parsing arguments and should be recombined together.
- Add a new method addJava9ModulesJvmArg with a state variable
firstPartJava9ModulesArg to keep the first part of the Java 9 module
argument, and so remove static qualifier of addJvmArg.